<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5"
    android:layout_margin="16dp"
    android:layout_gravity="center">

    <!-- Display -->
    <TextView
        android:id="@+id/textDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:inputType="none"
        android:gravity="end"
        android:layout_weight="1"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:focusable="false"
        android:cursorVisible="false"
        android:text=""
        />

    <!-- Buttons -->
    <Button
        android:id="@+id/percent"
        android:text="%"
        style="@style/CalculatorSymbolButton"/>
    <Button
        android:id="@+id/lg"
        android:text="lg"
        style="@style/CalculatorSymbolButton"/>
    <Button
        android:id="@+id/power"
        android:text="^"
        style="@style/CalculatorSymbolButton"
        />
    <Button
        android:id="@+id/equals"
        android:text="="
        style="@style/CalculatorSymbolButton"
        />
    <Button
        android:id="@+id/seven"
        android:text="7"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/eight"
        android:text="8"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/nine"
        android:text="9"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/divide"
        android:text="/"
        style="@style/CalculatorSymbolButton"
        />

    <Button
        android:id="@+id/four"
        android:text="4"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/five"
        android:text="5"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/six"
        android:text="6"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/multiply"
        android:text="*"
        style="@style/CalculatorSymbolButton"
        />

    <Button
        android:id="@+id/one"
        android:text="1"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/two"
        android:text="2"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/three"
        android:text="3"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/minus"
        android:text="-"
        style="@style/CalculatorSymbolButton"
        />

    <Button
        android:id="@+id/clear"
        android:text="C"
        style="@style/CalculatorSymbolButton"
        />
    <Button
        android:id="@+id/zero"
        android:text="0"
        style="@style/CalculatorNumberButton"
        />
    <Button
        android:id="@+id/dot"
        android:text="."
        style="@style/CalculatorSymbolButton"
        />
    <Button
        android:id="@+id/plus"
        android:text="+"
        style="@style/CalculatorSymbolButton" />

</GridLayout>
